--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,518 @@
-/* layouts
-タグのCSS
- */
+* {
+  margin: 0;
+  padding: 0;
+}
 
- /* header
-  */
+body {
+  background-color: cornsilk;
+}
 
+/* ※ヘッダー部分※ */
+.header {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  flex-direction: flex-end;
+  padding: 10px 20px;
+  background-color: #3b5234;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  /* top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000; */
+  justify-content: flex-end;
+  /* ヘッダー固定 */
+  background-color: #f8f0e6; 
+  text-align: right; 
+  padding: 20px 0; 
+  position: sticky; /* スクロールしても上部に固定する */
+  top: 0; /* 上部に配置 */
+  z-index: 1000; /* 他の要素の上に表示 */
+}
+.header1{
+position: relative;
+left: 1150px;
+top: -30px;
+}
+
+.header-link {
+  color: rgb(133, 35, 35); 
+  font-family: "Arial", sans-serif; 
+  font-size: 16px; 
+  font-weight: bold; 
+  text-decoration: none; /* 下線を消す */
+  margin: 0 15px; /* リンク間に余白を追加 */
+  display: inline-block; /* 横並びに表示 */
+  transition: color 0.3s ease;
+}
+
+/* ホバー時のスタイル */
+.header-link:hover {
+  color: #3b5234; 
+}
+
+
+
+
+.button {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  padding: 10px 10px;
+  background-color: aqua;
+  color: blue;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: auto;
+  }
+
+.kuma1 {
+  width: 4%;
+  height: 0%;
+  margin: 0;
+  margin-left: 2%;
+  margin-top: 1%;
+}
+
+.title {
+  font-size: 30px;
+  margin: 0;
+  margin-left: 1%;
+  padding: 0;
+  color: rgb(133, 35, 35);
+  font-family: "Arial", "Helvetica", sans-serif;
+  font-weight: bold;
+}
+
+
+
+/* ※フッター部分※ */
+.footer {
+  height: 300px;
+  background: cornsilk;
+  color:  rgb(133, 35, 35);
+  clear: both;
+  width: 40%;
+  position: relative;
+  left: 30%;
+}
+
+.button2{
+  margin-left: 190px;
+}
+
+.icon {
+    display: flex; 
+    justify-content: center; /* 中央揃え */
+    align-items: center; /* 中央揃え */
+    gap: 20px; /* アイコン間の間隔 */
+    margin-top: 10px; /* 上の余白 */
+}
   
+.icon i {
+  font-size: 40px; 
+  color: rgb(92, 31, 31); 
+  margin-top: 20px;
+  transition: transform 0.3s ease, color 0.3s ease; 
+}
+  
+.icon i:hover {
+    color: rgb(114, 99, 40); /* ホバー時の色変更 */
+    transform: scale(1.2); /* ホバー時に拡大 */
+    cursor: pointer; /* マウスポインタを変更 */
+}
+
+.Copyright{
+  margin-left: 200px;
+  margin-top: 20px;
+}
+
+/* ※メイン※ */
+
+.main-contents,
+.left-navi,
+.right-navi {
+  height: 3000px;
+}
+
+.main-contents {
+  background-color: cornsilk;
+  color: #fff;
+  float: left;
+  width: 50%;
+  margin-left: 370px;
+}
+
+.fukei {
+  width: 650px;
+  margin-left: 100px;
+}
+
+.sen{
+    margin-left: 30px;
+}
+
+.CAFEMAIN{
+  font-size: 100px;
+  margin-left: 200px;
+}
+
+.cafeimg {
+  display: flex;
+  margin-left: 70px;
+  /* margin-top: 10px; */
+  /* justify-content: space-between; */
+  /* gap: 5px ; */
+}
+
+.cafeimg img {
+  width: 250px;
+  height: auto;
+  margin-top: 50px;
+  margin-left: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(red, green, blue, alpha);
+  /* gap: px; */
+}
+
+.cafeimgdown{
+    margin-left: 70px;
+}
+
+.cafeimgdown img{
+  width: 250px;
+  height: auto;
+  margin-top: 20px;
+  margin-left: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(red, green, blue, alpha);
+
+}
+
+.cafesetumei{
+  background-color: white;
+  width: 60%;
+  height: 80%;
+  margin-left: 120px;
+  margin-top: 40px;
+  border-radius: 10px; 
+  color: black;
+}
+
+.slideshow-container{
+position: relative;
+top: 200px;
+left: 50px;
+}
+
+.staysetumei{
+  background-color: white;
+  width: 60%;
+  height: 80%;
+  margin-left: 120px;
+  margin-top: 40px;
+  border-radius: 10px; 
+  color: black;
+}
+
+.left-navi {
+  background-color: cornsilk;
+  color: rgb(133, 35, 35);
+  font-size: 10px;
+  width: 25%;
+  float: right;
+  position: fixed;
+  left: 45px;
+  margin-top: 80px;
+}
+
+
+
+
+
+
+.pool {
+  height: 80px;
+  border-radius: 50%;
+}
+.izakaya {
+  height: 80px;
+  border-radius: 50%;
+}
+.hannba-ga- {
+  height: 80px;
+  border-radius: 50%;
+}
+
+.onsenn {
+  height: 80px;
+  border-radius: 50%;
+}
+
+.miyage {
+  height: 80px;
+  border-radius: 50%;
+}
+
+.sita {
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
+  gap: 25px; 
+  display: flex;
+  position: relative;
+  right: 50px;
+  top: 100px;
+  /* margin-left: 20px;
+  margin-top: 150px; */
+  /* gap: 20px; */
+  /* margin-left: 10px; */
+}
+
+.daimei2{
+  margin-left: 10px;
+}
+
+.ue {
+  display: flex;
+  /* color: #717171; */
+  margin-top: 40px;
+  gap: 20px;
+}
+
+.twoimg {
+  display: flex;
+  justify-content: center; 
+  gap: 20px; 
+}
+
+.custom-button {
+  background-color: rgb(81, 22, 22); 
+  color: #ffffff; 
+  font-family: "Arial", sans-serif; 
+  font-weight: bold;
+  font-size: 10px; 
+  text-align: center; 
+  padding: 15px 30px; 
+  border: none; 
+  border-radius: 50px; 
+  cursor: pointer; 
+  line-height: 1.6; 
+  margin-top: 80px;
+  
+}
+
+.custom-button:hover {
+  background-color: #3b5234; 
+}
+
+.right-navi {
+  background-color: cornsilk;
+  color: #863333;
+  float: right;
+  width: 25%;
+  text-align: right;
+  /* writing-mode: vertical-rl; */
+  padding: 10px;
+  position: fixed;
+  right: 0;
+  /* margin-top: 50px; */
+}
+
+.daimei {
+  writing-mode: vertical-rl;
+ 
+}
+
+.right-contents {
+  display: flex;
+  flex-direction: row-reverse;
+  position: relative;
+  top: 200px;
+  right: 60px;
+  /* 右の文字 */
+  vertical-align: top;
+}
+
+.right-text {
+  writing-mode: vertical-rl;
+  text-align: right;
+  margin-top: 0;
+  padding-top: 0;
+  /* height: 250px; */
+  /* margin-bottom: 20px; */
+  line-height: 1.8;
+  /* margin-top: 50px; */
+  
+}
+
+
+
+/* .sita {
+  display: flex;
+  margin-left: 20px;
+  margin-top: 130px;
+  gap: 10px;
+  margin-left: 40px;
+} */
+
+
+
+.main {
+  width: 100%;
+  /* float: right; */
+  display: flex;
+}
+
+.sen {
+  color: #863333;
+}
+
+.aisu {
+  width: 500px;
+  margin-left: 100px;
+}
+
+.image-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.image-link p {
+  margin: 0;
+  color: cornsilk;
+}
+
+.image-link img:hover {
+  transform: scale(1.1);
+  transition: transform 0.3s ease;
+}
+
+.onsen1{
+    width: 700px;
+}
+
+.onsen2{
+    width: 700px;
+}
+
+.onsen3{
+    width: 700px;
+}
+
+/* フッター */
+.button2{
+  margin-top: 0;
+}
+
+/* .slideshow-container {
+    position: relative;
+    width: 100%;
+    max-width: 100%;
+    height: 100vh; 
+    margin: auto;
+    overflow: hidden;
+}
+
+.mySlides {
+    display: none;
+}
+
+.mySlides img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+} */
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
