--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  text-decoration: none;
 }
 
 body {
@@ -9,7 +10,7 @@ body {
 
 /* ※ヘッダー部分※ */
 .header {
-  height: 100px;
+  height: 60px;
   display: flex;
   align-items: center;
   flex-direction: flex-end;
@@ -34,9 +35,9 @@ body {
   z-index: 1000; /* 他の要素の上に表示 */
 }
 .header1{
-position: relative;
-left: 1150px;
-top: -30px;
+position: absolute;
+right: 10%;
+top: 80px;
 }
 
 .header-link {
@@ -72,11 +73,14 @@ top: -30px;
   }
 
 .kuma1 {
-  width: 4%;
-  height: 0%;
+  width: 100px;
   margin: 0;
   margin-left: 2%;
   margin-top: 1%;
+}
+
+.kamamonnset{
+  margin-bottom: 50px;
 }
 
 .title {
@@ -107,11 +111,11 @@ top: -30px;
 }
 
 .icon {
-    display: flex; 
-    justify-content: center; /* 中央揃え */
-    align-items: center; /* 中央揃え */
-    gap: 20px; /* アイコン間の間隔 */
-    margin-top: 10px; /* 上の余白 */
+  display: flex; 
+  justify-content: center; /* 中央揃え */
+  align-items: center; /* 中央揃え */
+  gap: 20px; /* アイコン間の間隔 */
+  margin-top: 10px; /* 上の余白 */
 }
   
 .icon i {
@@ -122,9 +126,9 @@ top: -30px;
 }
   
 .icon i:hover {
-    color: rgb(114, 99, 40); /* ホバー時の色変更 */
-    transform: scale(1.2); /* ホバー時に拡大 */
-    cursor: pointer; /* マウスポインタを変更 */
+  color: rgb(114, 99, 40); /* ホバー時の色変更 */
+  transform: scale(1.2); /* ホバー時に拡大 */
+  cursor: pointer; /* マウスポインタを変更 */
 }
 
 .Copyright{
@@ -147,14 +151,29 @@ top: -30px;
   width: 50%;
   margin-left: 370px;
 }
+@keyframes fadeInFromTop {
+  from {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
 .fukei {
-  width: 650px;
-  margin-left: 100px;
+  width: 610px;
+  margin-left: 90px;
+  margin-top: 20px;
+  opacity: 0;
+  transform: translateY(-50px);
+  animation: fadeInFromTop 3s ease-out forwards;
+
 }
 
 .sen{
-    margin-left: 30px;
+  margin-left: 50px;
 }
 
 .CAFEMAIN{
@@ -171,7 +190,7 @@ top: -30px;
 }
 
 .cafeimg img {
-  width: 250px;
+  width: 300px;
   height: auto;
   margin-top: 50px;
   margin-left: 20px;
@@ -182,10 +201,11 @@ top: -30px;
 
 .cafeimgdown{
     margin-left: 70px;
+    font-size: 5px;
 }
 
 .cafeimgdown img{
-  width: 250px;
+  width: 300px;
   height: auto;
   margin-top: 20px;
   margin-left: 20px;
@@ -197,11 +217,33 @@ top: -30px;
 .cafesetumei{
   background-color: white;
   width: 60%;
-  height: 80%;
+  /* height: 1000%; */
   margin-left: 120px;
   margin-top: 40px;
   border-radius: 10px; 
   color: black;
+}
+
+.cafesetumei1{
+  color: #3b5234;
+  margin-left: 30px;
+  margin-top: 10px;
+}
+
+.cafesetumei2{
+  color: #3b5234;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.cafesetumei3{
+  font-size: 13px;
+  margin-top: 8px;
+  margin-left: 45px;
+}
+
+.cafesetumei4{
+  color: white;
 }
 
 .slideshow-container{
@@ -215,9 +257,26 @@ left: 50px;
   width: 60%;
   height: 80%;
   margin-left: 120px;
-  margin-top: 40px;
+  margin-top: 200px;
   border-radius: 10px; 
   color: black;
+}
+
+.staysetumei1{
+  color: #3b5234;
+  margin-left: 30px;
+  margin-top: 10px;
+
+}
+
+.staysetumei2{
+  font-size: 13px;
+  margin-top: 8px;
+  margin-left: 45px;
+}
+
+.staysetumei3{
+  color: white;
 }
 
 .left-navi {
@@ -228,42 +287,63 @@ left: 50px;
   float: right;
   position: fixed;
   left: 45px;
-  margin-top: 80px;
+  margin-top: 10px;
 }
 
+.caption {
+  /* font-family: 'Poppins', sans-serif;  */
+  font-size: 1.2em; /* フォントサイズを調整 */
+  text-align: center; /* 中央揃え */
+  margin-top: 10px; /* 写真と文字の間隔を調整 */
+  color: #b37468; /* 優しい色合いを指定 */
+  font-family: 'Poppins', sans-serif; 
+}
 
 
 
 
 
 .pool {
-  height: 80px;
+  height: 90px;
   border-radius: 50%;
 }
 .izakaya {
-  height: 80px;
+  height: 90px;
   border-radius: 50%;
 }
 .hannba-ga- {
-  height: 80px;
+  height: 90px;
   border-radius: 50%;
 }
 
 .onsenn {
-  height: 80px;
+  height: 90px;
   border-radius: 50%;
 }
 
 .miyage {
-  height: 80px;
+  height: 90px;
   border-radius: 50%;
 }
+
+.daimei1{
+  margin-left: 10px;
+}
+
+.ue {
+  display: flex;
+  /* color: #717171; */
+  margin-top: 40px;
+  gap: 15px;
+}
+
+
 
 .sita {
   display: flex; 
   flex-direction: column; 
   align-items: center; 
-  gap: 25px; 
+  gap: 15px; 
   display: flex;
   position: relative;
   right: 50px;
@@ -275,15 +355,10 @@ left: 50px;
 }
 
 .daimei2{
-  margin-left: 10px;
+  margin-left: 20px;
 }
 
-.ue {
-  display: flex;
-  /* color: #717171; */
-  margin-top: 40px;
-  gap: 20px;
-}
+
 
 .twoimg {
   display: flex;
@@ -326,14 +401,18 @@ left: 50px;
 
 .daimei {
   writing-mode: vertical-rl;
+  text-align: left;
+  margin-top: -40px;
  
 }
+
+
 
 .right-contents {
   display: flex;
   flex-direction: row-reverse;
   position: relative;
-  top: 200px;
+  top: 250px;
   right: 60px;
   /* 右の文字 */
   vertical-align: top;
@@ -341,14 +420,28 @@ left: 50px;
 
 .right-text {
   writing-mode: vertical-rl;
-  text-align: right;
+  text-align: left;
   margin-top: 0;
   padding-top: 0;
   /* height: 250px; */
   /* margin-bottom: 20px; */
   line-height: 1.8;
-  /* margin-top: 50px; */
   
+  margin-top: -40px;
+  font-size: smaller;
+  
+}
+
+.right-textnone{
+  writing-mode: vertical-rl;
+  text-align: left;
+  color: cornsilk;
+}
+
+.right-textnone2{
+  writing-mode: vertical-rl;
+  text-align: left;
+  color: cornsilk;
 }
 
 
@@ -384,8 +477,8 @@ left: 50px;
 }
 
 .image-link p {
-  margin: 0;
-  color: cornsilk;
+  /* margin: 0;
+  color: cornsilk; */
 }
 
 .image-link img:hover {
@@ -394,15 +487,15 @@ left: 50px;
 }
 
 .onsen1{
-    width: 700px;
+  width: 700px;
 }
 
 .onsen2{
-    width: 700px;
+  width: 700px;
 }
 
 .onsen3{
-    width: 700px;
+  width: 700px;
 }
 
 /* フッター */
@@ -461,7 +554,7 @@ left: 50px;
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
+  right: 80px;
   border-radius: 3px 0 0 3px;
 }
 
@@ -516,3 +609,7 @@ left: 50px;
   from {opacity: .4}
   to {opacity: 1}
 }
+
+
+
+
